<resources>
    <string name="app_name">ExchangeRateCalculator</string>
    <string name="choose_function">Choose Function</string>
    <string name="calc_exch_rate">Calculate Exchange Rate</string>
    <string name="exch_rate_list">Exchange Rate List</string>
    <string name="business_date">Business Date</string>
    <string name="unit">Unit</string>
    <string name="value">Value</string>
    <string name="calculator">Calculator</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="calculate">calculate</string>
    <string name="input_hint">금액을 입력하세요</string>
    <string name="calendar">Calendar</string>
    <string name="choose_date">날짜 선택</string>



</resources>