<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/chooseFuncFragment">

    <fragment
        android:id="@+id/chooseFuncFragment"
        android:name="com.example.exchangerate.ChooseFuncFragment"
        android:label="@string/choose_function"
        tools:layout="@layout/fragment_choose_func">
        <action
            android:id="@+id/action_chooseFuncFragment_to_calcExchRateFragment"
            app:destination="@id/calcExchRateFragment" />
        <action
            android:id="@+id/action_chooseFuncFragment_to_exchRateListFragment"
            app:destination="@id/exchRateListFragment" />
    </fragment>
    <fragment
        android:id="@+id/calcExchRateFragment"
        android:name="com.example.exchangerate.CalcExchRateFragment"
        android:label="@string/calc_exch_rate">
        <action
            android:id="@+id/action_calcExchRateFragment_to_chooseFuncFragment"
            app:destination="@id/chooseFuncFragment" />
    </fragment>
    <fragment
        android:id="@+id/exchRateListFragment"
        android:name="com.example.exchangerate.ExchRateListFragment"
        android:label="@string/exch_rate_list">
        <action
            android:id="@+id/action_exchRateListFragment_to_chooseFuncFragment"
            app:destination="@id/chooseFuncFragment" />
    </fragment>
</navigation>