<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CalcExchRateFragment" >

    <data>
        <variable
            name="viewModel"
            type="com.example.exchangerate.ExchRateViewModel" />

        <variable
            name="calcExchRateFragment"
            type="com.example.exchangerate.CalcExchRateFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/item_biz_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_date"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/biz_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.dateUrl}"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/item_biz_date"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="20211029" />


        <Spinner
            android:id="@+id/item_input_unit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#1A9C27B0"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_biz_date" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/input_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_input_unit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_input_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/item_output_unit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="#1A9C27B0"
            android:spinnerMode="dialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/item_output_value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_output_unit"
            tools:text="1000" />


        <Button
            android:id="@+id/btnCalc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/purple_200"
            android:text="@string/calculate"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_output_value" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
